@@ -1,14 +1,14 @@
 <table id='banner'>
 	<tr>
-		<td id="bannerLogo">
+		<td id="bannerLogo" width="20%">
 			<img id="bannerLogoImage" src = "../assets/images/r2d2.jpg" alt = "Banner Image"/></a>
 		</td>
-                <td id='headerinfo' colspan="2">
+                <td id='headerinfo' colspan="2" width="50%">
 			<h2 id="siteTitle">Bot Collector Game</h2>
 		</td>
-		<td>
+		<td width="30%">
 			<form name='loginForm' id='loginForm' method='POST'>
-				{reload}<br/>
+				<br/>
 				<label for='username'>Username: </label>
 				<input type='text' name='username' id='username' size='15'>
 				<input type='hidden' name='do' value='{loginDo}'>
