@@ -2,6 +2,6 @@
 <ul>
     <li class="menu"><a href="/">Home</a></li>
     <li class="menu"><a href="Portfolio">Player Portfolio</a></li>
-    <li class="menu"><a href="Assemble_page">Bot Assembly</a></li>
+    <li class="menu"><a href="Assemble">Bot Assembly</a></li>
 </ul>
 </nav>
